--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "tsc": "node -v",
     "test": "jest",
     "bundle": "gulp --gulpfile node_modules/jovo-framework/gulpfile.js --cwd ./",
-    "start": "cd src && node index.js --webhook",
+    "start": "jovo run",
     "launch": "npm start -- --launch"
   },
   "repository": {
