--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "jovo-framework": "^3.0.18",
     "jovo-platform-alexa": "^3.0.15",
     "jovo-platform-googleassistant": "^3.0.15",
-    "jovo-plugin-debugger": "^3.0.14"
+    "jovo-plugin-debugger": "^3.0.14",
+    "lodash.template": ">=4.5.0"
   },
   "devDependencies": {
     "gulp": "^4.0.2",
@@ -32,8 +33,8 @@
     "debug": "jovo run --inspect 9229",
     "build": "jovo build",
     "bundle": "gulp --gulpfile node_modules/jovo-framework/gulpfile.js --cwd ./",
-    "firebase": "gcloud functions deploy voiceAssistent --region=europe-west3 --runtime nodejs10 --trigger-http --allow-unauthenticated --entry-point handler",
-    "deploy:firebase": "npm run build && npm run bundle && npm run firebase --prefix bundle/",
+    "deploy:firebase": "gcloud functions deploy voiceAssistent --project=happystudyplanner --region=europe-west3 --runtime nodejs10 --trigger-http --allow-unauthenticated --entry-point handler",
+    "deploy:firebase:all": "npm run build && npm run bundle && npm run deploy:firebase --prefix bundle/",
     "deploy:frontend": "npm run build && jovo deploy",
     "test": "jest"
   },
